2002-01-30  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (toplevel): Require 'static.
	(octet-html-render-function): Changed default value to
	`octet-w3m-region.'
	(octet-type-filter-alist): Changed filter function to
	`octet-filter-call2-extra'.
	(octet-attachments): New buffer-local variable.
	(w3m-about-octet-attachments): New function.
	(octet-w3m-region): Ditto.
	(octet-filter-call2-extra): New function.
	(octet-find-file): Do nothing when buffer is read-only.

	* w3m.el (w3m-about-retrieve): Decode buffer only if the content-type
	is text.

	* octet.el (octet-guess-type-from-name): Return nil if guess failed.
	(octet-buffer): Ask octet type if guess failed.
	(octet-content-type-alist): New variable.
	(octet-guess-type-from-content-type): New function.
	(octet-buffer): Added optional argument `content-type'.
	(octet-buffer): Ignore `quit'.
	(octet-suffix-type-alist): Added images.
	(octet-content-type-alist): Ditto.
	(octet-type-filter-alist): Ditto.
	(octet-magic-type-alist): Renamed from mime-magic-type-alist.
	(octet-decode-image): New function.
	(octet-guess-type-from-magic): New function.
	(octet-buffer): Use it.
	(octet-insert-buffer): New function.
	(mime-preview-octet): Use it.

2002-01-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-type-filter-alist): Changed default value for
	xlhtml and ppthtml.
	(octet-filter-call2): Fixed problem when return value of call-process
	is not numeric.
	(octet-filter-call1): Ditto.
	(octet-find-file): Use unwind-protect.
	(octet-filter-call2): Fixed docstring.
	(octet-filter-call1): Ditto.
	(octet-buffer): Fixed argument for `interactive'.

2002-01-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-encoding-type-alist): New option.
	(w3m-local-file-type): New function.
	(w3m-local-content-type): New implementation.
	(w3m-local-attributes): Call `w3m-local-file-type' instead of
	`w3m-local-content-type'.
	(w3m-download): `url' is lexically binded.  Call `message' to