@@ -1,3 +1,14 @@
+2002-01-31  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* octet.el (octet-content-type-alist): Added text/html.
+	(octet-magic-type-alist): Likewise.
+	(octet-type-filter-alist): Likewise;
+	Added `guess';
+	Changed result type of gzip as `guess'.
+	(octet-find-file-hook): New hook.
+	(octet-find-file): Run it.
+	(octet-filter-guess): New function.
+
 2002-01-30  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* octet.el (toplevel): Require 'static.
